// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Story Page A11y I can see the skip to content link 1`] = `"Сайтка өтүү"`;

exports[`Canonical Story Page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=58&amp;p=kyrgyz.story.23292889.page&amp;x2=[responsive]&amp;x3=[news-kyrgyz]&amp;x4=[ky]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[Test%2BSTY%2Bfor%2Bsocial%2Bembeds%2B-%2BBBC%2BNews%2B%D0%9A%D1%8B%D1%80%D0%B3%D1%8B%D0%B7%2B%D0%9A%D1%8B%D0%B7%D0%BC%D0%B0%D1%82%D1%8B]&amp;x11=[2020-04-24T14%3A51%3A17.000Z]&amp;x12=[2020-04-24T14%3A51%3A17.000Z]\\"/>"`;

exports[`Canonical Story Page Footer Anchors should match text and url 1`] = `
Object {
  "text": "BBC News, Кыргыз КызMATы",
  "url": "/kyrgyz",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 2`] = `
Object {
  "text": "Эмнеге BBC News ишенсе болот?",
  "url": "https://www.bbc.com/kyrgyz/institutional-49677275",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 3`] = `
Object {
  "text": "Колдонуу эрежелери",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157280",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 4`] = `
Object {
  "text": "Би-Би-Си жөнүндө",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157281",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 5`] = `
Object {
  "text": "Купуялык",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157282",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.co.uk/privacy/cookies/managing/cookie-settings.html",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 7`] = `
Object {
  "text": "Би-Би-Си менен байланышыңыз",
  "url": "https://www.bbc.co.uk/kyrgyz/send/u50853445",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-does-the-bbc-use-cookies-for-advertising/",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 9`] = `
Object {
  "text": "Башка интернет сайттардын мазмуну боюнча биздин позиция.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Story Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/kyrgyz"`;

exports[`Canonical Story Page Footer I can see the footer copyright and external linking text 1`] = `"© 2022 BBC. Би-Би-Си сырткы интернет сайттардын мазмуну үчүн жооптуу эмес. Башка интернет сайттардын мазмуну боюнча биздин позиция."`;

exports[`Canonical Story Page Header I can see the branding 1`] = `"BBC News, Кыргыз КызMATы"`;

exports[`Canonical Story Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Башталгыч бет",
  "url": "/kyrgyz",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Кыргызстан",
  "url": "/kyrgyz/topics/cz74kjpyk07t",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Дүйнө",
  "url": "/kyrgyz/topics/ck2l9z012nkt",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Видео",
  "url": "/kyrgyz/media/video",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Маданият/Илим",
  "url": "/kyrgyz/topics/czp8pjrkgp0t",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Журнал",
  "url": "/kyrgyz/magazine-54071664",
}
`;

exports[`Canonical Story Page Image Caption should match text 1`] = `"Сүрөттүн түшүндүрмөсү, Social media"`;

exports[`Canonical Story Page Image should match snapshot 1`] = `
<img
  alt="social media"
  class="e3vrtyk0 bbc-rb7xa0 e1mo64ex0"
  height="351"
  sizes="(min-width: 1008px) 645px, 100vw"
  src="https://ichef.bbci.co.uk/news/640/cpsdevpb/11D53/test/_63734037_socialmedia.jpg"
  srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/11D53/test/_63734037_socialmedia.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/11D53/test/_63734037_socialmedia.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/11D53/test/_63734037_socialmedia.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/11D53/test/_63734037_socialmedia.jpg 624w"
  width="624"
/>
`;

exports[`Canonical Story Page Lead image I can see an image with a caption 1`] = `"Сүрөттүн түшүндүрмөсү, Social media"`;

exports[`Canonical Story Page Main heading should match text 1`] = `"Test STY for social embeds"`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/kyrgyz/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Story Page SEO Canonical link 1`] = `"http://localhost:7080/kyrgyz/23292889"`;

exports[`Canonical Story Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Story Page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Story Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Story Page SEO Heading level 1 1`] = `"Test STY for social embeds"`;

exports[`Canonical Story Page SEO Lang attribute 1`] = `"ky"`;

exports[`Canonical Story Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "NewsArticle",
      "author": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
          "width": 1024,
        },
        "name": "BBC News Кыргыз Кызматы",
        "noBylinesPolicy": "https://www.bbc.com/kyrgyz/institutional-49677275#authorexpertise",
      },
      "dateModified": "2020-04-24T14:51:17.000Z",
      "datePublished": "2020-04-24T14:51:17.000Z",
      "description": "A test STY for social embeds",
      "headline": "Test STY for social embeds",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg",
        "width": 1024,
      },
      "inLanguage": Object {
        "@type": "Language",
        "alternateName": "ky",
        "name": "Kyrgyz",
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/kyrgyz/23292889",
        "@type": "WebPage",
        "name": "Test STY for social embeds",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
          "width": 1024,
        },
        "name": "BBC News Кыргыз Кызматы",
        "publishingPrinciples": "https://www.bbc.com/kyrgyz/institutional-49677275",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg",
      "url": "http://localhost:7080/kyrgyz/23292889",
    },
  ],
}
`;

exports[`Canonical Story Page SEO OG description 1`] = `"A test STY for social embeds"`;

exports[`Canonical Story Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg"`;

exports[`Canonical Story Page SEO OG image alt 1`] = `"social media"`;

exports[`Canonical Story Page SEO OG locale 1`] = `"ky-KG"`;

exports[`Canonical Story Page SEO OG site name 1`] = `"BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page SEO OG title 1`] = `"Test STY for social embeds - BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page SEO OG type 1`] = `"article"`;

exports[`Canonical Story Page SEO OG url 1`] = `"http://localhost:7080/kyrgyz/23292889"`;

exports[`Canonical Story Page SEO Page title 1`] = `"Test STY for social embeds - BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Story Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Story Page SEO Twitter creator 1`] = `"@bbckyrgyz"`;

exports[`Canonical Story Page SEO Twitter description 1`] = `"A test STY for social embeds"`;

exports[`Canonical Story Page SEO Twitter image alt 1`] = `"social media"`;

exports[`Canonical Story Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg"`;

exports[`Canonical Story Page SEO Twitter site 1`] = `"@bbckyrgyz"`;

exports[`Canonical Story Page SEO Twitter title 1`] = `"Test STY for social embeds - BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page Timestamp should match text and date 1`] = `
Object {
  "date": "2020-04-24",
  "text": "24 апрель 2020",
}
`;
